# whoami

./: Dockerfile  README.md  cleanup.sh  deploy.sh  deployment.yml  pyproject.toml  service.yml
tests/: test_whoami.py
whoami/: app.py
